--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ListActivity">
+        <activity android:name=".view.ListActivity">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,7 @@
         </intent-filter>
         </activity>
 
-        <activity android:name=".DetailActtivity"/>
+        <activity android:name=".view.DetailActtivity"/>
 
     </application>
 
